🐛 [FIX]: Modal description text alignment

--- a/packages/react/src/components/Modal/Modal.css
+++ b/packages/react/src/components/Modal/Modal.css
@@ -135,6 +135,14 @@
     &:where([data-contains-image] &) {
       align-items: center;
     }
+
+    & :where(.h-BodyText) {
+      text-align: left;
+
+      &:where([data-contains-image] &) {
+        text-align: left;
+      }
+    }
   }
 
   & :where(.h-ModalContent) {
